[gd_scene load_steps=25 format=3 uid="uid://dx1liqtnyn5y5"]

[ext_resource type="Texture2D" uid="uid://bgxlhccmujh0q" path="res://icon.svg" id="1_3acpp"]
[ext_resource type="Script" path="res://testing/platformer/Area3D.gd" id="2_rai63"]
[ext_resource type="Script" path="res://addons/modular_camera/camera_properties.gd" id="3_7u3p5"]
[ext_resource type="Script" path="res://testing/player.gd" id="3_b0c2j"]
[ext_resource type="Script" path="res://addons/modular_camera/camera_interpolation.gd" id="4_db2fa"]
[ext_resource type="Script" path="res://addons/modular_camera/modular_camera.gd" id="4_hsbit"]
[ext_resource type="Script" path="res://addons/modular_camera/behaviours/static.gd" id="4_ka8sa"]
[ext_resource type="Script" path="res://addons/modular_camera/camera_ray_cast_proprties.gd" id="8_ay371"]

[sub_resource type="ProceduralSkyMaterial" id="ProceduralSkyMaterial_qflqa"]
sky_horizon_color = Color(0.64625, 0.65575, 0.67075, 1)
ground_horizon_color = Color(0.64625, 0.65575, 0.67075, 1)

[sub_resource type="Sky" id="Sky_syhjj"]
sky_material = SubResource("ProceduralSkyMaterial_qflqa")

[sub_resource type="Environment" id="Environment_t52xd"]
background_mode = 2
sky = SubResource("Sky_syhjj")
tonemap_mode = 2
glow_enabled = true

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_14orb"]
albedo_texture = ExtResource("1_3acpp")
uv1_scale = Vector3(100, 100, 100)

[sub_resource type="Resource" id="Resource_yyxpg"]
script = ExtResource("3_7u3p5")
distance = 2.0
direction = 1.571
height = 0.0
lean = 0.0
roll = 0.0
pitch = 0.0
yaw = 0.0
pan = Vector2(0, 0)
local_pan = Vector2(0, 0)
offset = Vector3(0, 0, 0)
fov_multiplier = 1.0

[sub_resource type="Resource" id="Resource_nobev"]
script = ExtResource("4_ka8sa")
constant_properties = SubResource("Resource_yyxpg")
modifiers = Array[Resource("res://addons/modular_camera/camera_modifier.gd")]([])
priority = 10
override_target = true
target_override = Vector3(0, 0, 0)
override_reference_frame = false
reference_frame_override = Basis(1, 0, 0, 0, 1, 0, 0, 0, 1)
override_raycast = true

[sub_resource type="BoxShape3D" id="BoxShape3D_88kwg"]
size = Vector3(1, 2, 2)

[sub_resource type="Resource" id="Resource_ptest"]
script = ExtResource("3_7u3p5")
distance = 1.0
direction = 0.0
height = 0.0
lean = 0.0
roll = 0.0
pitch = 0.0
yaw = 0.0
pan = Vector2(0, 0)
local_pan = Vector2(0, 0)
offset = Vector3(0, 0, 0)
fov_multiplier = 1.0

[sub_resource type="Resource" id="Resource_fp2a3"]
script = ExtResource("8_ay371")
colision_mask = 256
margin_radius = 0.05
recovery_type = 0
recovery_speed_stiffness = 4.0

[sub_resource type="Resource" id="Resource_ebbr8"]
script = ExtResource("4_ka8sa")
constant_properties = SubResource("Resource_ptest")
modifiers = Array[Resource("res://addons/modular_camera/camera_modifier.gd")]([])
priority = 0
override_target = false
target_override = Vector3(0, 0, 0)
override_reference_frame = false
reference_frame_override = Basis(1, 0, 0, 0, 1, 0, 0, 0, 1)
override_raycast = true
raycast_override = SubResource("Resource_fp2a3")

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_n3dkb"]
radius = 0.2
height = 1.4

[sub_resource type="CapsuleMesh" id="CapsuleMesh_fm3vy"]
radius = 0.2
height = 1.4

[sub_resource type="Resource" id="Resource_1kkov"]
script = ExtResource("3_7u3p5")
distance = 1.0
direction = 0.0
height = 0.0
lean = 0.0
roll = 0.0
pitch = 0.0
yaw = 0.0
pan = Vector2(0, 0)
local_pan = Vector2(0, 0)
offset = Vector3(0, 0, 0)
fov_multiplier = 1.0

[sub_resource type="Resource" id="Resource_yf15p"]
script = ExtResource("4_ka8sa")
constant_properties = SubResource("Resource_1kkov")
modifiers = Array[Resource("res://addons/modular_camera/camera_modifier.gd")]([])
priority = 0
override_target = false
target_override = Vector3(0, 0, 0)
override_reference_frame = false
reference_frame_override = Basis(1, 0, 0, 0, 1, 0, 0, 0, 1)
override_raycast = false

[sub_resource type="Resource" id="Resource_fk6lh"]
script = ExtResource("4_db2fa")
duration = 1.0
type = 3
use_different_curve_for_target = false
target_type = 3
priority = 0

[sub_resource type="Resource" id="Resource_kjx76"]
script = ExtResource("8_ay371")
colision_mask = 256
margin_radius = 0.05
recovery_type = 2
recovery_speed_stiffness = 4.0

[node name="test_2" type="Node3D"]

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource("Environment_t52xd")

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="."]
transform = Transform3D(-0.866023, -0.433016, 0.250001, 0, 0.499998, 0.866027, -0.500003, 0.749999, -0.43301, 0, 0, 0)
shadow_enabled = true

[node name="level" type="Node3D" parent="."]

[node name="CSGBox3D" type="CSGBox3D" parent="level"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -1, 0)
use_collision = true
collision_layer = 257
size = Vector3(100, 2, 100)
material = SubResource("StandardMaterial3D_14orb")

[node name="CSGBox3D2" type="CSGBox3D" parent="level"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -2.5, 1, -0.95)
use_collision = true
collision_layer = 257
size = Vector3(1, 2, 0.1)

[node name="CSGBox3D3" type="CSGBox3D" parent="level"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -2.5, 1, -3.05)
use_collision = true
collision_layer = 257
size = Vector3(1, 2, 0.1)

[node name="CSGBox3D4" type="CSGBox3D" parent="level"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -2.5, 2.05, -2)
use_collision = true
collision_layer = 257
size = Vector3(1, 0.1, 2)

[node name="CSGBox3D5" type="CSGBox3D" parent="level"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -3.05, 1, -2)
use_collision = true
collision_layer = 257
size = Vector3(0.1, 2, 2)

[node name="CSGBox3D6" type="CSGBox3D" parent="level"]
transform = Transform3D(0.707107, 0, 0.707107, 0, 1, 0, -0.707107, 0, 0.707107, 4.34602, 1.5, -0.903985)
use_collision = true
collision_layer = 257
size = Vector3(0.1, 3, 5.1)

[node name="Area3D" type="Area3D" parent="level" node_paths=PackedStringArray("camera", "player")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -2.5, 1, -2)
script = ExtResource("2_rai63")
camera = NodePath("../../ModularCamera")
player = NodePath("../../player")
behaviour = SubResource("Resource_nobev")

[node name="CollisionShape3D" type="CollisionShape3D" parent="level/Area3D"]
shape = SubResource("BoxShape3D_88kwg")

[node name="player" type="CharacterBody3D" parent="." node_paths=PackedStringArray("camera")]
script = ExtResource("3_b0c2j")
camera = NodePath("../ModularCamera")
alternate_behaviour = SubResource("Resource_ebbr8")

[node name="CollisionShape3D" type="CollisionShape3D" parent="player"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.7, 0)
shape = SubResource("CapsuleShape3D_n3dkb")

[node name="MeshInstance3D" type="MeshInstance3D" parent="player"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.7, 0)
mesh = SubResource("CapsuleMesh_fm3vy")

[node name="camera_target" type="Node3D" parent="player"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.7, 0)

[node name="ModularCamera" type="Camera3D" parent="." node_paths=PackedStringArray("target_node")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.7, 1)
script = ExtResource("4_hsbit")
target_node = NodePath("../player/camera_target")
default_behaviour = SubResource("Resource_yf15p")
default_interpolation = SubResource("Resource_fk6lh")
default_ray_cast = SubResource("Resource_kjx76")

[connection signal="body_entered" from="level/Area3D" to="level/Area3D" method="_on_body_entered"]
[connection signal="body_exited" from="level/Area3D" to="level/Area3D" method="_on_body_exited"]
